# agente-negotiator-influ-test

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: __main__.py  cli.py
app/agents/: negotiator.py  state.py
app/core/: orchestrator.py  registry.py  store.py
app/db/: models.py  seed.py  session.py
app/tools/: __init__.py  guardrails.py  pricing.py  retrieval.py
tests/: test_guardrails.py  test_pricing.py  test_retrieval.py
